# ai_sales_eval_arena

./: .env.example  .gitignore  ANTHROPIC_MIGRATION_SUMMARY.md  Pipfile  README.md  SIMPLE_TEST_SUMMARY.md  fake_transcripts_summary.md  pyproject.toml  requirements.txt  setup.py
data/: README.md
data/test_transcripts/: number_3.txt  number_4.txt
data/transcripts/: alex_algorithms.txt  benny_bottleneck.txt  betty_benchmark.txt  bob_basic.txt  carlos_codecrusher.txt  chad_charts.txt  chester_chaotic.txt  derek_disaster.txt  diana_debugger.txt  eddie_exception.txt  felicia_fantastic.txt  felix_functions.txt  frank_flamegraph.txt  garfield_graphs.txt  gary_garbage.txt  gordon_glitchy.txt  harold_haphazard.txt  iris_inefficient.txt  jasmine_jittery.txt  kevin_kernel.txt  larry_latency.txt  luna_laggy.txt  maxwell_profiler.txt  maya_magnificent.txt  miranda_metrics.txt  monica_memory.txt  nancy_nonsense.txt  neo_newbie.txt  ollie_optimize.txt  oscar_overloaded.txt  pablo_pathetic.txt  penny_performance.txt  pete_processor.txt  quincy_quirky.txt  rachel_random.txt  roger_runtime.txt  ruby_recursive.txt  sally_sampling.txt  samantha_speedster.txt  simon_stackoverflows.txt  (+10 more)
src/ai_sales_eval_arena/: __init__.py  cli.py  config.py  grading.py  models.py  tournament.py  transcript_loader.py  visualization.py  web_app.py
src/ai_sales_eval_arena/templates/: base.html  home.html
test_data/transcripts/: number_1.txt  number_10.txt  number_11.txt  number_2.txt  number_5.txt  number_6.txt  number_7.txt  number_8.txt  number_9.txt
tests/: __init__.py  test_anthropic_integration.py  test_models.py  test_simple_tournament.py  test_transcript_loader.py
